[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://components/ItemProperty.tscn" type="PackedScene" id=2]
[ext_resource path="res://themes/default_theme.theme" type="Theme" id=3]
[ext_resource path="res://components/OpenFileDialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/SaveFileDialog.tscn" type="PackedScene" id=5]
[ext_resource path="res://components/SettingsDialog.tscn" type="PackedScene" id=6]
[ext_resource path="res://components/AboutDialog.tscn" type="PackedScene" id=7]
[ext_resource path="res://components/ExportImage.tscn" type="PackedScene" id=8]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 28.0

[node name="FileMenu" type="MenuButton" parent="VBoxContainer/MenuContainer"]
margin_right = 36.0
margin_bottom = 28.0
text = "File"
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Open...", null, 0, false, false, 1, 0, null, "", false, "Save", null, 0, false, false, 2, 0, null, "", false, "Save As...", null, 0, false, false, 3, 0, null, "", false, "Export", null, 0, false, false, 4, 0, null, "", false, "", null, 0, false, false, 5, 0, null, "", true, "Exit", null, 0, false, false, 6, 0, null, "", false ]
switch_on_hover = true

[node name="EditMenu" type="MenuButton" parent="VBoxContainer/MenuContainer"]
margin_left = 40.0
margin_right = 78.0
margin_bottom = 28.0
text = "Edit"
items = [ "Add", null, 0, false, false, 0, 0, null, "", false, "  Add Left", null, 0, false, false, 1, 0, null, "", false, "  Add Right", null, 0, false, false, 2, 0, null, "", false, "Expand", null, 0, false, false, 3, 0, null, "", false, "Delete", null, 0, false, false, 4, 0, null, "", false ]
switch_on_hover = true

[node name="SettingsMenu" type="MenuButton" parent="VBoxContainer/MenuContainer"]
margin_left = 82.0
margin_right = 148.0
margin_bottom = 28.0
focus_mode = 2
text = "Settings"
items = [ "Settings...", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true

[node name="WindowsMenu" type="MenuButton" parent="VBoxContainer/MenuContainer"]
margin_left = 152.0
margin_right = 217.0
margin_bottom = 28.0
focus_mode = 2
text = "Window"
items = [ "Canvas", null, 1, true, false, 0, 0, null, "", false, "Inspector", null, 1, true, false, 1, 0, null, "", false ]
switch_on_hover = true

[node name="HelpMenu" type="MenuButton" parent="VBoxContainer/MenuContainer"]
margin_left = 221.0
margin_right = 264.0
margin_bottom = 28.0
focus_mode = 2
text = "Help"
items = [ "About...", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphEdit" type="GraphEdit" parent="VBoxContainer/HSplitContainer"]
margin_right = 812.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
scroll_offset = Vector2( -120, -23 )
zoom_min = 0.149
zoom_max = 2.144
zoom_step = 1.1
show_zoom_label = true

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/HSplitContainer"]
margin_left = 824.0
margin_right = 1024.0
margin_bottom = 568.0
rect_min_size = Vector2( 200, 0 )
tab_align = 0

[node name="Property" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 40.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/TabContainer/Property"]
margin_right = 192.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemProperty" parent="VBoxContainer/HSplitContainer/TabContainer/Property/VBoxContainer" instance=ExtResource( 2 )]
margin_bottom = 524.0

[node name="Overview" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = 32.0
margin_right = -16.0
margin_bottom = -4.0

[node name="ItemList" type="ItemList" parent="VBoxContainer/HSplitContainer/TabContainer/Overview"]
margin_right = 192.0
margin_bottom = 532.0
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true

[node name="OpenFileDialog" parent="." instance=ExtResource( 4 )]
show_hidden_files = true

[node name="SaveFileDialog" parent="." instance=ExtResource( 5 )]
show_hidden_files = true

[node name="SettingsDialog" parent="." instance=ExtResource( 6 )]

[node name="AboutDialog" parent="." instance=ExtResource( 7 )]

[node name="ExportImage" parent="." instance=ExtResource( 8 )]

[connection signal="connection_request" from="VBoxContainer/HSplitContainer/GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="VBoxContainer/HSplitContainer/GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="node_selected" from="VBoxContainer/HSplitContainer/GraphEdit" to="." method="_on_GraphEdit_node_selected"]
[connection signal="node_unselected" from="VBoxContainer/HSplitContainer/GraphEdit" to="." method="_on_GraphEdit_node_unselected"]
[connection signal="popup_request" from="VBoxContainer/HSplitContainer/GraphEdit" to="." method="_on_GraphEdit_popup_request"]
[connection signal="tab_changed" from="VBoxContainer/HSplitContainer/TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="property_changed" from="VBoxContainer/HSplitContainer/TabContainer/Property/VBoxContainer/ItemProperty" to="." method="_on_ItemProperty_property_changed"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
[connection signal="settings_changed" from="SettingsDialog" to="." method="_on_SettingsDialog_settings_changed"]
